# repository_project1

wiki/: db.sqlite3  pyproject.toml
wiki/encyclopedia/: urls.py  views.py
wiki/encyclopedia/static/encyclopedia/: styles.css
wiki/encyclopedia/templates/encyclopedia/: editpage.html  error.html  index.html  layout.html  matches.html  newpage.html  response.html
wiki/entries/: CS50.md  Chevrolet.md  Harvard.md  Mexico.md  Real Madrid.md  Spain.md  apple.md  hola.md  jinja.md
wiki/wiki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
