[tool.poetry]
name = "wiki"
version = "0.1.0"
description = "Wikipedia Clone"
authors = ["Luis Leal"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
markdown2 = "^2.3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
